--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -57,7 +57,9 @@
   &__items {
     transition: var(--nav-transition);
     display: flex;
+    height: 50px;
     // transform: translateX(-50%);
+    align-content: center;
   }
 
   &__t {
@@ -291,6 +293,7 @@
 
   &__title {
     font-family: "Laila", sans-serif;
+    text-align: center;
 
     font-size: 4rem;
     font-weight: 300;
@@ -305,6 +308,17 @@
     display: grid;
     // align-content: center;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 2rem;
+    align-content: stretch;
+  }
+
+  &__container2 {
+    color: var(--color-gray-dark-2);
+    padding: 5rem 0 0 0rem;
+    font-size: 2rem;
+    display: grid;
+    // align-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     grid-gap: 2rem;
     align-content: stretch;
   }
@@ -354,18 +368,6 @@
 .section-social {
   display: flex;
   justify-content: center;
-  // background-color: aliceblue;
-
-  // border-radius: 15px;
-  // min-height: 20rem;
-  // padding-bottom: 2rem;
-  // // display: flex;
-  // position: relative;
-  // // padding: 0 10rem;
-  // margin: 4rem auto;
-
-  // max-width: 80vw;
-  // max-width: 600px;
 
   &__container {
     background-color: aliceblue;
@@ -388,7 +390,6 @@
     display: flex;
     align-items: center;
 
-    margin-right: 2rem;
     margin-top: 2rem;
     text-decoration: none;
     list-style-type: none;
@@ -445,7 +446,7 @@
     font-size: 2rem;
 
     &--button {
-      margin-right: -1rem;
+      margin-right: 1rem;
 
       &-text {
         // background-color: aqua;
@@ -538,10 +539,19 @@
 
 .header-artificia {
   height: 100vh;
+  overflow: hidden;
 }
 
 .header-banner {
   margin-top: 4rem;
+}
+
+.header-subtitle {
+  font-family: "Aldrich", sans-serif;
+  margin-top: -2.5rem;
+  font-size: 2rem;
+  text-align: center;
+  color: var(--artificia-blue-dark);
 }
 
 .banner-box {
@@ -550,7 +560,7 @@
   position: absolute;
   z-index: 120;
 
-  height: 450px;
+  height: 550px;
   max-width: 500px;
 
   background-image: var(--artificia-gradient);
@@ -564,9 +574,9 @@
 }
 
 .header-text {
-  margin: 0 5rem;
+  margin: 1rem 2rem;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   color: var(--color-gray-light-4);
   font-family: "aldrich", sans-serif;
 }
@@ -684,10 +694,6 @@
 /////////////////////////////////////////////////////////////////////
 // SECTION--LUNA
 
-.section-luna {
-  // height: 100vh;
-}
-
 .lunagridcontainer {
   margin-top: 4rem;
 
@@ -714,8 +720,6 @@
 
 .luna-description {
   grid-area: 1 / 1 / span 2 / span 1;
-  font-size: 2rem;
-  font-family: "aldrich", sans-serif;
 
   margin: 4rem 7rem;
 
@@ -730,6 +734,8 @@
   }
 
   &__text {
+    font-size: 2rem;
+    font-family: "aldrich", sans-serif;
     margin: 1.5rem auto;
   }
 }
@@ -792,20 +798,31 @@
   font-style: normal;
 }
 
+.sectText {
+  font-family: "Aldrich", sans-serif;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin: 0 3rem;
+
+  max-width: 600px;
+}
+
 .section-landing {
-  // background-image: var(--artificia-gradient-td);
   height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
 .meow {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: 1fr;
-  grid-column-gap: 15px;
-  grid-row-gap: 0px;
-  margin: 0 5rem;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 15rem 2rem;
+
+  height: 450px;
 }
 
 .sectionHeaders {
@@ -814,48 +831,15 @@
   text-align: center;
 }
 
-.p {
-  position: relative;
-  // background-color: rgb(192, 161, 192);
-  height: 500px;
-  width: 100%;
-
-  margin: 10rem auto;
-}
-
-.image1 {
-  background-image: url("../img/bg_apartment21.png");
-  background-size: cover;
-  overflow: visible;
-}
-
-.image2 {
-  background-image: url("../img/bg_citystreets1.png");
-  background-size: cover;
-}
-
-.image3 {
-  background-image: url("../img/bg\ capitolbuilding.png");
-  background-size: cover;
-}
-
-.sectText {
-  font-family: "Aldrich", sans-serif;
-  font-size: 2rem;
-  // text-align: center;
+.imagebase {
+  height: 450px;
   display: flex;
-  flex-direction: column;
-  justify-items: center;
-}
+  align-items: center;
 
-.div1 {
-  grid-area: 1 / 1 / span 1 / span 2;
-}
-.div2 {
-  grid-area: 1 / 3 / span 1 / span 2;
-}
-.div3 {
-  grid-area: 1 / 4 / 2 / 6;
+  img {
+    height: 100%;
+    // height: auto;
+  }
 }
 
 .section-technical {
@@ -867,9 +851,7 @@
 
 .tech-img-container {
   margin-top: 4rem;
-  padding-bottom: 10rem;
-  width: 65vw;
-  height: 65vh;
+  height: 600px;
   display: flex;
   justify-content: center;
 }
@@ -880,6 +862,12 @@
   border-radius: 3rem;
   box-shadow: 1 1 3rem rgba(0, 0, 0, 0.4);
   display: none;
+}
+
+.carousel-img-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .carousel-container {
@@ -957,14 +945,15 @@
 
 .section-brooch {
   // background-color: var(--artificia-black);
-  // height: 100vh;
+  min-height: 600px;
   // position: relative;
 
   &__container {
     margin-top: 4rem;
     padding-bottom: 15rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
   }
 }
 
@@ -972,17 +961,45 @@
   font-size: 2rem;
   font-family: "aldrich", sans-serif;
 
-  margin: 4rem 7rem;
+  text-align: center;
+
+  padding: 2rem 2rem;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+
+  border: 2px solid var(--artificia-blue);
+  border-radius: 2rem;
+
+  transition: all 0.2s;
+
+  &:hover {
+    background-color: #353535;
+    color: var(--color-gray-light-4);
+  }
 }
 
 .brooch-img-container {
-  height: 600px;
+  height: 700px;
 }
 
 .brooch-img {
   height: 100%;
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+//ABOUT.HTML
+
+////////////////////////////////////////////////////////////////////////////////////////
+
+.section-about {
+  background-color: aliceblue;
+  // height: 800px;
+  margin: 5rem 12rem;
+  padding: 1rem 3rem;
+
+  border-radius: 3rem;
 }
