--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -16,7 +16,7 @@
   top: 0;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
   border-bottom: 1.5px solid var(--color-primary);
-  height: 100px;
+  height: 110px;
 
   transition: var(--nav-transition);
   transform: translateY(0%);
@@ -35,8 +35,7 @@
   &__logo {
     transition: var(--nav-transition);
     height: 10rem;
-    margin: 0rem 0rem;
-    // transform: translateX(-50%);
+    margin: 0;
   }
 
   &__container {
@@ -57,13 +56,15 @@
   &__items {
     transition: var(--nav-transition);
     display: flex;
-    height: 50px;
-    // transform: translateX(-50%);
     align-content: center;
+    height: 50px;
   }
 
   &__t {
     list-style-type: none;
+    display: flex;
+    align-content: center;
+    height: 50px;
   }
 
   &__item {
@@ -317,7 +318,6 @@
     padding: 5rem 0 0 0rem;
     font-size: 2rem;
     display: grid;
-    // align-content: center;
     grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     grid-gap: 2rem;
     align-content: stretch;
@@ -944,13 +944,13 @@
 }
 
 .section-brooch {
-  // background-color: var(--artificia-black);
-  min-height: 600px;
-  // position: relative;
+  height: auto;
+  width: 100%;
+  padding-bottom: 7rem;
 
   &__container {
     margin-top: 4rem;
-    padding-bottom: 15rem;
+    // padding-bottom: 15rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -963,7 +963,7 @@
 
   text-align: center;
 
-  padding: 2rem 2rem;
+  padding: 2rem;
 
   display: flex;
   flex-direction: column;
@@ -982,11 +982,15 @@
 }
 
 .brooch-img-container {
-  height: 700px;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
 }
 
 .brooch-img {
-  height: 100%;
+  height: auto;
+  width: 100%;
+  max-width: 500px;
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -1002,4 +1006,8 @@
   padding: 1rem 3rem;
 
   border-radius: 3rem;
+}
+
+.about-description {
+  margin: auto;
 }
