--- a/sass/_queries.scss
+++ b/sass/_queries.scss
@@ -13,9 +13,9 @@
 }
 
 @media only screen and (max-width: 1450px) {
-  .section-social__item {
-    margin: 0 2rem;
-  }
+  // .section-social__item {
+  //   margin: 0 2rem;
+  // }
   .brooch-text {
     padding: 1rem;
   }
