--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -375,9 +375,7 @@
     border-radius: 15px;
     min-height: 20rem;
     padding-bottom: 2rem;
-    // display: flex;
     position: relative;
-    // padding: 0 10rem;
     margin: 4rem 4rem;
 
     min-width: 40vw;
@@ -487,7 +485,7 @@
   padding-top: 2rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-row-gap: 2vh;
+  grid-row-gap: 1rem;
 
   &__logo {
     // background-color: aliceblue;
@@ -570,7 +568,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // justify-content: space-evenly;
 }
 
 .header-text {
