--- a/sass/_queries.scss
+++ b/sass/_queries.scss
@@ -43,10 +43,7 @@
   // NAV BAR
   .nav__item {
     font-size: 1.7rem;
-
-    &:last-child {
-      min-width: 86px;
-    }
+    min-width: 86px;
   }
   // NAV BAR
   // ARTIFICIA.HTML
@@ -81,22 +78,11 @@
   }
 
   .banner-box {
-    left: 2%;
-    top: 20%;
-    position: absolute;
-    z-index: 120;
+    left: 50%;
+    margin-left: -250px;
 
     height: 450px;
     max-width: 500px;
-
-    background-image: var(--artificia-gradient);
-    box-shadow: inset 5px 8px 10px #000;
-    border-radius: 15px 50px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // justify-content: space-evenly;
   }
 
   .header-text {
@@ -143,15 +129,13 @@
   // NAV BAR
   .nav__item {
     margin-right: 0;
-    &:last-child {
-      min-width: 75px;
-    }
+    min-width: 75px;
   }
   // NAV BAR
 
   // ABOUT.HTML
   .section-us__profiles {
-    margin-bottom: 20rem;
+    margin-bottom: 24rem;
   }
   // ABOUT.HTML
   // ARTIFICIA.HTML
@@ -368,9 +352,8 @@
   .img {
     position: absolute;
     top: 0;
-    // left: -200px;
     width: 100vw;
-    height: 100vh;
+    height: 800px;
     transition: all 5s;
   }
 
@@ -389,11 +372,13 @@
   }
 
   .banner-box {
-    left: 20%;
-    top: 20%;
+    left: 50%;
+    margin-left: -250px;
+    // left: 30%;
+    // top: 20%;
 
     height: 600px;
-    max-width: 500px;
+    // max-width: 500px;
   }
 
   .header-text {
@@ -417,19 +402,16 @@
       line-height: 3rem;
     }
   }
+
+  .section-social__item {
+    max-width: 300px;
+    // margin: 0 2rem;
+  }
   // INDEX.HTML
 }
 
 @media only screen and (max-width: 750px) {
   // ARTIFICIA.HTML
-
-  .banner-box {
-    left: 14%;
-    top: 20%;
-
-    height: 600px;
-    max-width: 500px;
-  }
 
   .section-title {
     font-size: 4rem;
@@ -466,8 +448,15 @@
     justify-content: center;
     margin: 0;
   }
+
+  // ARTIFICIA.HTML
+
+  // INDEX.HTML
+  .section-social__item {
+    font-size: 1.75rem;
+    margin: 2rem 2rem 0.25rem 2rem;
+  }
 }
-// ARTIFICIA.HTML
 
 @media only screen and (max-width: 685px) {
   // ABOUT.HTML
@@ -490,14 +479,6 @@
 
   .meow {
     height: 600px;
-  }
-
-  .banner-box {
-    left: 10%;
-    top: 20%;
-
-    height: 600px;
-    max-width: 500px;
   }
 
   .suitorimage {
@@ -665,6 +646,13 @@
 }
 
 @media only screen and (max-width: 620px) {
+  // INDEX.HTMl
+  .section-us__profiles--title2 {
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  // INDEX.HTML
   .brooch-text {
     font-size: 1.5rem;
     padding: 0.75rem;
@@ -684,22 +672,22 @@
     width: 0.5rem;
   }
 
-  .banner-box {
-    left: 10%;
-    top: 20%;
-
-    height: 600px;
-    max-width: 400px;
-  }
-
   .header-banner {
     img {
       width: 325px;
     }
   }
+
+  .banner-box {
+    margin-left: -200px;
+    max-width: 400px;
+  }
 }
 
 @media only screen and (max-width: 540px) {
+  // INDEX.HTML
+
+  // INDEX.HTML
   // ARTIFICIA.HTML
 
   .sectionHeaders {
@@ -886,8 +874,15 @@
 
   // INDEX.HTML
   .nav {
+    height: 6rem;
+
+    padding-top: 0.5rem;
+    &__logo {
+      height: 5rem;
+    }
     &__title {
-      display: none;
+      // display: none;
+      font-size: 2rem;
     }
   }
 
@@ -921,8 +916,9 @@
   }
 
   .banner-box {
-    left: 10%;
-    top: 20%;
+    top: 25%;
+    left: 50%;
+    margin-left: -150px;
 
     height: 450px;
     max-width: 300px;
@@ -943,15 +939,36 @@
   }
 }
 
+@media only screen and (max-width: 450px) {
+  .nav {
+    &__title {
+      display: none;
+    }
+  }
+}
+
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 420px) {
+  // FOOTER
+  .footer {
+    grid-template-columns: repeat(3, 125px);
+    grid-row-gap: 0.5rem;
+  }
+  // FOOTER
   // NAV BAR
-  .nav__item {
-    margin-right: 0;
-    font-size: 1.7rem;
-    &:last-child {
-      min-width: 73px;
-      margin-right: 1rem;
+
+  .nav {
+    &__item {
+      margin-right: 0;
+      font-size: 1.7rem;
+      min-width: 65px;
+      font-size: 1.4rem;
+    }
+
+    &__t {
+      &:last-child {
+        margin-right: 1rem;
+      }
     }
   }
   // NAV BAR
@@ -1162,11 +1179,15 @@
 
   .section-artificia {
     &__container {
-      width: 300px;
+      width: 325px;
     }
     &__left {
       padding: 2rem;
       margin: 0 2rem;
+
+      &--title {
+        // transform: translateX(10%);
+      }
     }
 
     &__right {
@@ -1182,14 +1203,47 @@
     }
   }
 
+  .section-us__profiles {
+    &:last-child {
+      margin-bottom: 25rem;
+    }
+  }
+
   .btn--artificia {
     min-width: 20rem;
   }
 
   .section-social {
     .final-btn::after {
-      display: none;
+      width: 75px;
+      top: 90px;
+    }
+
+    &__container {
+      margin: 2rem -1rem;
+    }
+
+    &__title {
+      margin: 1rem 1rem;
+    }
+
+    &__body {
+      &--button {
+        font-size: 1.35rem;
+      }
+    }
+
+    &__item {
+      font-size: 1.5rem;
+
+      &,
+      &:link,
+      &:visited {
+        text-decoration: none;
+        text-align: center;
+      }
     }
   }
+
   // INDEX.HTML
 }
